# madshus-products

./: .env.example  .gitignore  README.md  get_products.py  product_info_formatter.py  pyproject.toml
docs/: data_flow.md  database_schema.md
madshus/: __init__.py  logging.py
madshus/collectors/: __init__.py  product_collector.py
madshus/config/: __init__.py  settings.py
madshus/database/: __init__.py  session.py
madshus/formatters/: __init__.py  product_formatter.py
madshus/models/: __init__.py  base.py  product.py
madshus/schemas/: __init__.py  product.py
madshus/utils/: __init__.py  graphql.py
scripts/: collect_products.py  format_products.py  generate_output.py
templates/: ai_prompt.txt
tests/: test_collector.py  test_formatter.py
