[tool.poetry]
name = "madshus-products"
version = "0.1.0"
description = "A pipeline for collecting and formatting Madshus product information"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "madshus"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
rich = "^13.0.0"
typer = "^0.9.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
collect-products = "scripts.collect_products:main"
format-products = "scripts.format_products:main"
generate-output = "scripts.generate_output:main"
